[gd_scene load_steps=19 format=3 uid="uid://dkitosr0k5cbl"]

[ext_resource type="Environment" uid="uid://cm77bbr0io118" path="res://scenes/main-environment.tres" id="1_env"]
[ext_resource type="Script" uid="uid://ory1gl6wk22i" path="res://scripts/maze_generator.gd" id="2_maze_gen"]
[ext_resource type="PackedScene" uid="uid://cnw5rs5qiyxnw" path="res://sample/Mini Arena/Models/GLB format/border-corner.glb" id="3_border_corner"]
[ext_resource type="PackedScene" uid="uid://dr26h67bx4fi7" path="res://sample/Mini Arena/Models/GLB format/border-straight.glb" id="4_border_straight"]
[ext_resource type="Script" uid="uid://dwcqatfo052pb" path="res://scripts/trophy_area.gd" id="6_trophy_area"]
[ext_resource type="PackedScene" uid="uid://c6djdyyexv0ax" path="res://sample/Mini Arena/Models/GLB format/trophy.glb" id="7_trophy"]
[ext_resource type="PackedScene" path="res://scenes/projectile.tscn" id="10_projectile"]
[ext_resource type="PackedScene" path="res://scenes/player.tscn" id="11_player"]
[ext_resource type="Script" uid="uid://6ris4xcypswv" path="res://scripts/multiplayer_manager.gd" id="12_multiplayer_manager"]
[ext_resource type="Script" path="res://scripts/mobile_controls.gd" id="13_mobile_controls"]
[ext_resource type="Texture2D" path="res://mobile-controls-1/Sprites/Style H/Default/dpad_element_north.png" id="14_dpad_north"]
[ext_resource type="Texture2D" path="res://mobile-controls-1/Sprites/Style H/Default/dpad_element_south.png" id="15_dpad_south"]
[ext_resource type="Texture2D" path="res://mobile-controls-1/Sprites/Style H/Default/dpad_element_west.png" id="16_dpad_west"]
[ext_resource type="Texture2D" path="res://mobile-controls-1/Sprites/Style H/Default/dpad_element_east.png" id="17_dpad_east"]
[ext_resource type="Texture2D" path="res://mobile-controls-1/Sprites/Style H/Default/button_circle.png" id="18_button_circle"]

[sub_resource type="SphereShape3D" id="2"]
radius = 0.6

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(40, 0.2, 40)

[sub_resource type="PlaneMesh" id="4"]
size = Vector2(40, 40)

[node name="GameRoot" type="Node3D"]
script = ExtResource("2_maze_gen")
cols = 8
rows = 8
wall_scene = ExtResource("4_border_straight")
corner_scene = ExtResource("3_border_corner")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_env")

[node name="Players" type="Node3D" parent="."]

[node name="Projectiles" type="Node3D" parent="."]

[node name="MultiplayerManager" type="Node" parent="."]
script = ExtResource("12_multiplayer_manager")
player_scene = ExtResource("11_player")
projectile_scene = ExtResource("10_projectile")

[node name="StartLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
text = "Game Scene Loaded"

[node name="Maze" type="Node3D" parent="."]

[node name="TrophyZone" type="Area3D" parent="."]
script = ExtResource("6_trophy_area")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TrophyZone"]
shape = SubResource("2")

[node name="Trophy" parent="TrophyZone" instance=ExtResource("7_trophy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04754305, 0.13094115, -0.107485056)
mesh = SubResource("4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 48.0
text = "Score: 0"

[node name="ConnectionLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 48.0
offset_right = 380.0
offset_bottom = 80.0
text = "Status: Offline"

[node name="MobileControls" type="CanvasLayer" parent="."]
script = ExtResource("13_mobile_controls")

[node name="Root" type="Control" parent="MobileControls"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MovePad" type="VBoxContainer" parent="MobileControls/Root"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -240.0
offset_right = 240.0
offset_bottom = -24.0
theme_override_constants/separation = 6

[node name="UpRow" type="HBoxContainer" parent="MobileControls/Root/MovePad"]
theme_override_constants/separation = 6

[node name="UpSpacerLeft" type="Control" parent="MobileControls/Root/MovePad/UpRow"]
custom_minimum_size = Vector2(64, 64)

[node name="MoveUp" type="TextureButton" parent="MobileControls/Root/MovePad/UpRow" groups=["mobile_action_buttons"]]
custom_minimum_size = Vector2(120, 120)
texture_normal = ExtResource("18_button_circle")
ignore_texture_size = true
stretch_mode = 2
metadata/action_name = "move_forward"

[node name="MoveUpLabel" type="Label" parent="MobileControls/Root/MovePad/UpRow/MoveUp"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -10.0
offset_right = 36.0
offset_bottom = 10.0
text = "FORWARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpSpacerRight" type="Control" parent="MobileControls/Root/MovePad/UpRow"]
custom_minimum_size = Vector2(64, 64)

[node name="MidRow" type="HBoxContainer" parent="MobileControls/Root/MovePad"]
theme_override_constants/separation = 6

[node name="MoveLeft" type="TextureButton" parent="MobileControls/Root/MovePad/MidRow" groups=["mobile_action_buttons"]]
custom_minimum_size = Vector2(120, 120)
texture_normal = ExtResource("18_button_circle")
ignore_texture_size = true
stretch_mode = 2
metadata/action_name = "move_left"

[node name="MoveLeftLabel" type="Label" parent="MobileControls/Root/MovePad/MidRow/MoveLeft"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = 10.0
text = "LEFT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MidSpacer" type="Control" parent="MobileControls/Root/MovePad/MidRow"]
custom_minimum_size = Vector2(64, 64)

[node name="MoveRight" type="TextureButton" parent="MobileControls/Root/MovePad/MidRow" groups=["mobile_action_buttons"]]
custom_minimum_size = Vector2(120, 120)
texture_normal = ExtResource("18_button_circle")
ignore_texture_size = true
stretch_mode = 2
metadata/action_name = "move_right"

[node name="MoveRightLabel" type="Label" parent="MobileControls/Root/MovePad/MidRow/MoveRight"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -10.0
offset_right = 26.0
offset_bottom = 10.0
text = "RIGHT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownRow" type="HBoxContainer" parent="MobileControls/Root/MovePad"]
theme_override_constants/separation = 6

[node name="DownSpacerLeft" type="Control" parent="MobileControls/Root/MovePad/DownRow"]
custom_minimum_size = Vector2(64, 64)

[node name="MoveDown" type="TextureButton" parent="MobileControls/Root/MovePad/DownRow" groups=["mobile_action_buttons"]]
custom_minimum_size = Vector2(120, 120)
texture_normal = ExtResource("18_button_circle")
ignore_texture_size = true
stretch_mode = 2
metadata/action_name = "move_back"

[node name="MoveDownLabel" type="Label" parent="MobileControls/Root/MovePad/DownRow/MoveDown"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
text = "DOWN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownSpacerRight" type="Control" parent="MobileControls/Root/MovePad/DownRow"]
custom_minimum_size = Vector2(64, 64)

[node name="ActionPad" type="VBoxContainer" parent="MobileControls/Root"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -260.0
offset_right = -24.0
offset_bottom = -24.0
theme_override_constants/separation = 10

[node name="FireButton" type="TextureButton" parent="MobileControls/Root/ActionPad" groups=["mobile_action_buttons"]]
custom_minimum_size = Vector2(160, 160)
texture_normal = ExtResource("18_button_circle")
ignore_texture_size = true
stretch_mode = 2
metadata/action_name = "fire"

[node name="FireLabel" type="Label" parent="MobileControls/Root/ActionPad/FireButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = 10.0
text = "FIRE"
horizontal_alignment = 1
vertical_alignment = 1


[node name="SprintButton" type="TextureButton" parent="MobileControls/Root/ActionPad" groups=["mobile_action_buttons"]]
custom_minimum_size = Vector2(140, 56)
texture_normal = ExtResource("19_button_circle_wide")
ignore_texture_size = true
stretch_mode = 2
metadata/action_name = "move_fast"

[node name="SprintLabel" type="Label" parent="MobileControls/Root/ActionPad/SprintButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -10.0
offset_right = 28.0
offset_bottom = 10.0
text = "SPRINT"
horizontal_alignment = 1
vertical_alignment = 1
